Improve .toList();